--- a/CSS/resume_css.css
+++ b/CSS/resume_css.css
@@ -5,7 +5,7 @@
 }
 
 #nav {
-    position:fixed;
+    position: absolute;
 }
 
 
@@ -587,6 +587,9 @@
 }
 
 @media only screen and (max-width: 800px){
+    #nav {
+        position: fixed;
+    }
     #logo{
         width: 74%;
         margin-left: 13%;
