--- a/CSS/common.css
+++ b/CSS/common.css
@@ -165,6 +165,7 @@ body {
         text-align: center;
         position: relative;
         visibility: visible;
+        margin-bottom: -.001%;
     }
 
     #mobile_nav a:link, #mobile_nav a:visited {
