--- a/CSS/gfx2.css
+++ b/CSS/gfx2.css
@@ -182,6 +182,7 @@ body {
         text-align: center;
         position: relative;
         visibility: visible;
+        margin-bottom: -.001%;
     }
 
     #mobile_nav a:link, #mobile_nav a:visited {
