--- a/CSS/resume_css.css
+++ b/CSS/resume_css.css
@@ -42,8 +42,8 @@
     color: white;
     /*margin-top: 3%;*/
     padding: 18% 0;
-    /*background-color: rgba(221,51,34,1);*/
-    background-image: url("../Images/Website Resume Bg Pattern.svg");
+    background-color: rgba(221,51,34,1);
+    /*background-image: url("../Images/Website Resume Bg Pattern.svg");*/
     background-size: 100%;
 }
 
@@ -526,8 +526,10 @@
 }
 
 .awards_styles img {
-    width: 30%;
-    height: 30%
+    /*width: 30%;*/
+    /*height: 30%*/
+    width: 300px;
+    height: 300px;
 }
 
 .awards_styles div {
@@ -558,11 +560,23 @@
     text-decoration: underline;
 }
 
+@media only screen and (min-width: 1500px){
+    .awards_styles p{
+        font-size: 22px;
+    }
+}
+
 @media only screen and (max-width: 1400px) {
     #experience{
         padding: 60% 0;
         background-size: 110%;
         background-position:top;
+    }
+}
+
+@media only screen and (max-width: 1300px){
+    .awards_styles{
+        margin:  0 0;
     }
 }
 
@@ -633,6 +647,15 @@
         width: 10%;
         height: auto;
     }
+    .awards_styles h1{
+        font-size: 30px;
+    }
+}
+
+@media only screen and (max-width: 940px) {
+    .awards_styles h1{
+        font-size: 27px;
+    }
 }
 
 @media only screen and (max-width: 900px){
@@ -667,6 +690,13 @@
         margin-left: 0%;
         width: 8%;
         height: auto;
+    }
+}
+
+@media only screen and (max-width: 846px) {
+    #awards{
+        width: 90%;
+        margin: 0 5% 0 5%;
     }
 }
 
@@ -711,6 +741,57 @@
         position: fixed;
         margin-left: 0;
         margin-right: 0;
+    }
+
+    .awards_styles div {
+        padding: 0 3%;
+    }
+}
+
+@media only screen and (max-width: 750px){
+    #awards{
+        margin: 0 2.5% 0 2.5%;
+        width: 95%;
+    }
+    .awards_styles h1{
+        font-size: 24px;
+    }
+}
+
+@media only screen and (max-width: 686px){
+    .awards_styles {
+        display: block;
+    }
+    #awards{
+        margin: 0 15% 0 15%;
+        width: 70%;
+    }
+
+    .awards_styles img {
+        width: 100%;
+        height: 100%;
+    }
+
+    .awards_styles div {
+        padding: 2% 5%;
+    }
+
+    .awards_styles p, .awards_styles h1, .awards_styles h2 {
+        text-align: center;
+    }
+
+    #aw1{
+        width: 75%;
+        margin-left: 12.5%;
+        font-size: 20px;
+    }
+
+    #award_intro {
+        margin-top: -6%;
+    }
+
+    #multiple_awards_wrap{
+        margin-top: 6%;
     }
 }
 
@@ -769,6 +850,22 @@
     }
     #experience h4 {
         font-size: 17px;
+    }
+}
+
+@media only screen and (max-width: 500px){
+    #awards{
+        margin: 0 705% 0 7.5%;
+        width: 85%;
+    }
+    #gradient_break{
+        padding: 12% 0;
+    }
+
+    #aw1 {
+        padding: .4% 0;
+        width: 80%;
+        margin-left: 10%;
     }
 }
 
