Added Separate Footer CSS Files and Added Border Top

--- a/CSS/proj_css.css
+++ b/CSS/proj_css.css
@@ -90,6 +90,10 @@
     margin-top: 3%;
 }
 
+#footer_container{
+    margin-top: 5%;
+}
+
 @media only screen and (max-width: 1500px) {
     #proj_contents img{
         max-width:134%;
