--- a/CSS/footer_light.css
+++ b/CSS/footer_light.css
@@ -1,3 +1,11 @@
+#standalone_footer{
+    color: white;
+}
+
+#navigation ul li h4, #social_media_footer ul li h4, #projects_footer ul li h4, #graphics_footer ul li h4 {
+    color: white;
+}
+
 /*4 THE FOOTER*/
 #footerx{
     display: flex;
@@ -20,30 +28,35 @@
 
 #footer_container{
     background-color: transparent;
-    /*display: flex;*/
+    display: flex;
     margin-bottom: 0;
+}
+
+#section1, #section2 {
+    width: 40%;
+    display: flex;
 }
 
 #personal_logo{
     margin-top: 20px;
-    width: 24%;
+    width: 20%;
 }
 
 #social_media_footer{
-    margin-left: 1.33%;
-    width: 24%;
+    width: 50%;
 }
 
 #projects_footer{
-    margin-left: 1.33%;
-    width: 24%;
+    width: 50%;
 }
 
 #navigation{
-    margin-left: 1.33%;
-    width: 24%;
+    width: 50%;
     display: inline;
+}
 
+#graphics_footer{
+    width: 50%;
 }
 
 #footerx ul {
@@ -56,14 +69,6 @@
     margin: 0 auto;
     width: 80px;
     height: 80px;
-}
-
-#standalone_footer{
-    color: white;
-}
-
-#navigation ul li h4, #social_media_footer ul li h4, #projects_footer ul li h4 {
-    color: white;
 }
 
 
@@ -83,7 +88,7 @@
     width: 80px;
     height: 80px;
     display: block;
-    margin: 0 auto;
+    margin: 2% auto 0 auto;
     position: fixed;
     visibility: hidden;
 }
@@ -92,36 +97,31 @@
     border-top: 2px solid gainsboro;
 }
 
-@media only screen and (max-width: 680px) {
+@media only screen and (max-width: 1150px) {
     #footerx{
-        width: 80%;
-        margin-left: 10%;
+        width: 90%;
+        margin-left: 5%;
+        margin-right: 5%;
     }
 }
 
-@media only screen and (max-width: 574px) {
-    #footerx{
-        width: 100%;
+@media only screen and (max-width: 750px) {
+    #footer_container{
+        display: block;
+    }
+    #navigation, #projects_footer, #social_media_footer, #graphics_footer{
         margin-left: 0;
     }
 
-    #navigation{
-        margin-left: -5%;
+    #section2, #section1{
+        width: 50%;
     }
 
-}
-
-@media only screen and (max-width: 440px){
     #personal_logo{
+        width: 0;
         visibility: hidden;
         position: fixed;
     }
-
-    #footerx{
-        margin-left: 5%;
-        width: 90%;
-    }
-
     #mobile_logo{
         visibility: visible;
         position: relative;
@@ -131,10 +131,68 @@
         width: 80px;
         height: 80px;
     }
+}
 
-    #navigation, #projects_footer, #social_media_footer{
-        width: 33%;
+@media only screen and (max-width: 600px) {
+    #footerx{
+        width: 100%;
+        margin-left: 0;
+    }
+}
+
+@media only screen and (max-width: 500px){
+    #footerx{
+        display: block;
+        margin-left:10%;
+        width: 80%;
+        margin-right: 10%;
     }
 
+    #section2{
+        margin-top: -5%;
+    }
 
+    #section1, #section2{
+        margin-left: -2%;
+    }
+
+    #section1, #section2{
+        /*display: block;*/
+        text-align: left;
+        width: 100%;
+    }
+
+    #navigation, #projects_footer, #social_media_footer, #graphics_footer{
+        margin-left: 0;
+        width: 50%;
+    }
 }
+
+@media only screen and (max-width: 420px) {
+    #footerx {
+        display: block;
+        margin-left: 5%;
+        width: 90%;
+        margin-right: 5%;
+    }
+    #section1, #section2{
+        margin-left: 0;
+    }
+
+    #projects_footer, #social_media_footer{
+        margin-left: -3%;
+    }
+}
+
+@media only screen and (max-width: 360px){
+    #footerx{
+        display: block;
+        margin-left:0;
+        width: 100%;
+        margin-right:0;
+    }
+    #projects_footer, #social_media_footer{
+        margin-left: -5%;
+    }
+}
+
