More Room on Mobile Resume Intro

--- a/CSS/resume_css.css
+++ b/CSS/resume_css.css
@@ -904,6 +904,10 @@
     #awards1, #awards2, #awards3{
         margin-top: 10%;
     }
+
+    #intro{
+        padding: 38% 0;
+    }
 }
 
 @media only screen and (max-width: 414px){
