--- a/CSS/game_css.css
+++ b/CSS/game_css.css
@@ -49,10 +49,10 @@ body {
 #game{
     display: block;
     text-align: center;
-    width: 50%;
-    height: 50%;
+    /*width: 50%;*/
+    /*height: 50%;*/
     margin-top: 3%;
-    margin-left: 25%;
+    /*margin-left: 25%;*/
 }
 
 @media only screen and (max-width: 1400px){
