--- a/CSS/resume_css.css
+++ b/CSS/resume_css.css
@@ -339,7 +339,7 @@
     /*use to be 55%*/
     padding: 67% 0;
     /*background-image: url("../Images/ExperienceBg_Vector.svg");*/
-    background-image: url("../Images/exp_w_nmn.svg");
+    background-image: url("../Images/exp_w_nmn2.svg");
     background-size: 100%;
     background-position-y: -2px;
     width: auto;
